--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -6,65 +6,81 @@
 				A diverse, colorful group of Information Systems undergraduates collaborated to make this project a reality...
 			</h4>
 		</div>
+	</div>
 </div>
 		<div class="row">
-			<div class="medium-2 columns">&nbsp;
-			</div>
-			<div class="small-4 medium-2 columns">
-				<%= image_tag "achal.png", class: "achal", size: "110x110", style: "float: left" %>
+			<div class="row_center">
+				<div class="small-12 medium-2 columns">
+					<%= image_tag "achal.png", class: "about_img"%>
+				</div>
 			</div>
 
-			<div class="small-8 medium-6 columns">
-				<p align="justify"><strong>Achal Channarasappa</strong> | <i>Technical Lead</i><br>
+			<div class="show-for-medium-up medium-8 medium-centered columns">
+				<p><strong>Achal Channarasappa</strong> | <i>Technical Lead</i><br>
 					Achal is a third year Information Systems major with
 					minors in Business Administration and Human Computer Interaction. He enjoys visiting local coffee shops, watching thought provoking movies, and going on nature walks. He will be working as a Software Engineer Intern at Spiceworks in Austin during the summer of 2015.</p>
 			</div>
-			<div class="medium-2 columns">&nbsp;
+
+			<div class="show-for-small-only small-12 row_center columns">
+				<p><strong>Achal Channarasappa</strong> | <i>Technical Lead</i><br>
+					Achal is a third year Information Systems major with
+					minors in Business Administration and Human Computer Interaction. He enjoys visiting local coffee shops, watching thought provoking movies, and going on nature walks. He will be working as a Software Engineer Intern at Spiceworks in Austin during the summer of 2015.</p>
 			</div>
+			
 		</div>
 
 		<div class="row">
-			<div class="medium-2 columns">&nbsp;
+			<div class="row_center">
+				<div class="small-12 medium-2 columns">
+					<%= image_tag "ryan.png", class: "about_img"%>
+				</div>
 			</div>
-			<div class="small-4 medium-2 columns">
-				<%= image_tag "ryan.png", class: "ryan", size: "110x110", style: "float: left" %>
+			<div class="show-for-medium-up medium-8 medium-centered columns">
+				<p><strong>Ryan Donegan</strong> | <i>Developer, UI Designer</i><br>
+					Ryan is a third year Information Systems and Human Computer Interaction double-major. He enjoys running and has participated in marathons as well. Ryan also enjoys sarcasm and can stir up a good laugh in our team. He will be working at Intuit over the summer of 2015.</p>
 			</div>
-			<div class="small-8 medium-6 columns">
-				<p align="justify"><strong>Ryan Donegan</strong> | <i>Developer, UI Designer</i><br>
-					Ryan is a third year Information Systems major and Human Computer Interaction minor. He enjoys running and has participated in marathons as well. Ryan also enjoys sarcasm and can stir up a good laugh in our team. He will be working at Intuit over the summer of 2015.</p>
+
+			<div class="show-for-small-only small-12 row_center columns">
+				<p><strong>Ryan Donegan</strong> | <i>Developer, UI Designer</i><br>
+					Ryan is a third year Information Systems and Human Computer Interaction double-major. He enjoys running and has participated in marathons as well. Ryan also enjoys sarcasm and can stir up a good laugh in our team. He will be working at Intuit over the summer of 2015.</p>
 			</div>
-			<div class="medium-2 columns">&nbsp;
-			</div>
+			
 		</div>
 
 		<div class="row">
-			<div class="medium-2 columns">&nbsp;
-			</div>
-			<div class="small-4 medium-2 columns">
-				<%= image_tag "kat.png", class: "kat", size: "110x110", style: "float: left" %>
+			<div class="row_center">
+				<div class="small-12 medium-2 columns">
+					<%= image_tag "kat.png", class: "about_img" %>
+				</div>
 			</div>
 
-			<div class="small-8 medium-6 columns">
-				<p align="justify"><strong>Katherine Du</strong> | <i>Developer, UI Designer</i><br>
+			<div class="show-for-medium-up medium-8 medium-centered columns">
+				<p><strong>Katherine Du</strong> | <i>Developer, UI Designer</i><br>
 					Katherine is a third year Information Systems major and Human Computer Interaction minor. She is interested in the field of educational technology and learning media. Katherine enjoys trying new local restaurants and making clever puns. She will be working as a LRNGO.com web developer intern in Houston for the summer of 2015.</p>
 			</div>
-			<div class="medium-2 columns">&nbsp;
+			<div class="show-for-small-only small-12 row_center columns">
+				<p><strong>Katherine Du</strong> | <i>Developer, UI Designer</i><br>
+					Katherine is a third year Information Systems major and Human Computer Interaction minor. She is interested in the field of educational technology and learning media. Katherine enjoys trying new local restaurants and making clever puns. She will be working as a LRNGO.com web developer intern in Houston for the summer of 2015.</p>
 			</div>
+			
 		</div>
 
 		<div class="row">
-			<div class="medium-2 columns">&nbsp;
-			</div>
-			<div class="small-4 medium-2 columns">
-				<%= image_tag "maggie.png", class: "maggie", size: "110x110", style: "float: left" %>
+			<div class="row_center">
+				<div class="small-12 medium-2 columns">
+					<%= image_tag "maggie.png", class: "about_img" %>
+				</div>
 			</div>
 
-			<div class="small-8 medium-6 columns">
-				<p align="justify"><strong>Maggie Li</strong> | <i>Project Manager</i><br>
+			<div class="show-for-medium-up medium-8 medium-centered columns">
+				<p><strong>Maggie Li</strong> | <i>Project Manager</i><br>
 					Maggie is a third year Information Systems major with minors in Human Computer Interaction and Business Administration. She enjoys dancing and snowboarding, as well as traveling and eating. Maggie will be working as a Salesforce software engineer intern in San Francisco for the summer of 2015.</p>
 			</div>
-			<div class="medium-2 columns">&nbsp;
+			<div class="show-for-small-only small-12 row_center columns">
+				<p><strong>Maggie Li</strong> | <i>Project Manager</i><br>
+					Maggie is a third year Information Systems major with minors in Human Computer Interaction and Business Administration. She enjoys dancing and snowboarding, as well as traveling and eating. Maggie will be working as a Salesforce software engineer intern in San Francisco for the summer of 2015.</p>
 			</div>
+			
 		</div>
 	</div>
 </div>
