fixed new audit page view

--- a/app/views/audits/_form.html.erb
+++ b/app/views/audits/_form.html.erb
@@ -11,15 +11,19 @@
       </ul>
     </div>
   <% end %>
-  <div class="small-12 medium-6 columns">
-    <h1>Audit Form</h1>
-  </div>
 
+    <div class="small-12 medium-6 columns">
+      <h1>Audit Form</h1>
+    </div>
+
+
+<div class="row">
   <div class="medium-6 columns show-for-medium-up">
       <div class="actions">
         <br><br><br>
       </div>
-    </div>
+  </div>
+</div>
 
   <div class="form-back">
 
@@ -79,6 +83,7 @@
           </div>
         </fieldset>
       </div>
+    </div>
       
 
     <div class="row">
